# headerkit

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  action.yml  mkdocs.yml  pyproject.toml  versions.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-tag.yml  check-llvm.yml  check-python.yml  check-release-prep.yml  ci.yml  docs.yml  pre-commit-autoupdate.yml  release.yml  test-install-libclang.yml  test.yml
0.10/guides/cache/: index.html
0.10/search/: search_index.json
0.12/: 404.html  index.html  objects.inv  sitemap.xml
0.12/guides/architecture/: index.html
0.12/guides/build-backend/: index.html
0.12/guides/cache/: index.html
0.12/guides/cffi/: index.html
0.12/guides/custom-backends/: index.html
0.12/guides/custom-writers/: index.html
0.12/guides/install-libclang/: index.html
0.12/guides/installation/: index.html
0.12/guides/quickstart/: index.html
0.12/reference/: index.html
0.12/reference/backends/: index.html
0.12/reference/cffi/: index.html
0.12/reference/ctypes/: index.html
0.12/reference/cython/: index.html
0.12/reference/diff/: index.html
0.12/reference/generate/: index.html
0.12/reference/install-libclang/: index.html
0.12/reference/ir/: index.html
0.12/reference/json/: index.html
0.12/reference/lua/: index.html
0.12/reference/prompt/: index.html
0.12/reference/writers/: index.html
0.12/search/: search_index.json
0.12/tutorials/ctypes-writer/: index.html
0.12/tutorials/header-cleanup/: index.html
0.12/tutorials/json-export/: index.html
0.12/tutorials/pxd-writer/: index.html
0.16/guides/cffi-integration/: index.html
0.16/search/: search_index.json
0.19/: 404.html  index.html  sitemap.xml
0.19/design/target-triples/: index.html
0.19/guides/architecture/: index.html
0.19/guides/build-backend/: index.html
0.19/guides/cache/: index.html
0.19/guides/cffi/: index.html
0.19/guides/cffi-integration/: index.html
0.19/guides/cibuildwheel/: index.html
0.19/guides/custom-backends/: index.html
0.19/guides/custom-writers/: index.html
0.19/guides/github-action/: index.html
0.19/guides/install-libclang/: index.html
0.19/guides/installation/: index.html
0.19/guides/quickstart/: index.html
0.19/reference/: index.html
0.19/reference/backends/: index.html
0.19/reference/cffi/: index.html
0.19/reference/ctypes/: index.html
0.19/reference/cython/: index.html
0.19/reference/diff/: index.html
0.19/reference/generate/: index.html
0.19/reference/install-libclang/: index.html
0.19/reference/ir/: index.html
0.19/reference/json/: index.html
0.19/reference/lua/: index.html
0.19/reference/prompt/: index.html
0.19/reference/writers/: index.html
0.19/search/: search_index.json
0.3/: 404.html  index.html  objects.inv  sitemap.xml
0.3/reference/: index.html
0.3/search/: search_index.json
0.4/: 404.html  index.html  objects.inv  sitemap.xml
0.4/reference/: index.html
0.5/: 404.html  index.html  sitemap.xml
0.5/reference/: index.html
0.5/search/: search_index.json
0.6/: 404.html  index.html  sitemap.xml
0.6/reference/: index.html
0.7/: 404.html  index.html  sitemap.xml
0.7/reference/: index.html
0.7/search/: search_index.json
0.8/: 404.html  index.html  objects.inv  sitemap.xml
0.8/reference/: index.html
0.8/search/: search_index.json
cir/: __init__.py  ir.py
cir/_clang/: __init__.py
cir/backends/: __init__.py  libclang.py
cir/writers/: __init__.py  cffi.py
clangir/: __init__.py  install_libclang.py  ir.py
clangir/_clang/: __init__.py  _version.py
clangir/backends/: __init__.py  libclang.py
clangir/writers/: __init__.py  cffi.py  json.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/reference/: index.html
dev/search/: search_index.json
docs/: index.md
docs/design/: target-triples.md
docs/guides/: architecture.md  build-backend.md  cache.md  cffi-integration.md  cffi.md  cibuildwheel.md  custom-backends.md  custom-writers.md  github-action.md  install-libclang.md  installation.md  quickstart.md
docs/reference/: backends.md  cffi.md  ctypes.md  cython.md  diff.md  generate.md  index.md  install-libclang.md  ir.md  json.md  lua.md  prompt.md  writers.md
docs/tutorials/: ctypes-writer.md  header-cleanup.md  json-export.md  pxd-writer.md
headerkit/: __init__.py  _build_backend.py  _cache_cli.py  _cache_key.py  _cache_store.py  _cli.py  _config.py  _generate.py  _ir_json.py  _populate.py  _resolve.py  _slug.py  _store_merge.py  _target.py  build_backend_auto.py  cache.py  install_libclang.py  ir.py
headerkit/_clang/: __init__.py  _version.py
headerkit/backends/: __init__.py  libclang.py
headerkit/writers/: __init__.py  _cython_keywords.py  _cython_types.py  cffi.py  ctypes.py  cython.py  diff.py  json.py  lua.py  prompt.py
scripts/: vendor_clang.py
tests/: conftest.py  test_batch_generate.py  test_cli.py  test_cli_integration.py  test_config.py  test_install_libclang.py  test_ir.py  test_output_paths.py  test_public_api.py  test_resolve.py  test_vendor_clang.py
tests/test_backends/: test_libclang.py  test_registry.py
tests/test_cache/: conftest.py  test_build_backend.py  test_cache_attrs.py  test_cache_cli.py  test_cache_key.py  test_cache_store.py  test_compute_hash.py  test_generate.py  test_hash_comment.py  test_ir_json.py  test_is_up_to_date.py  test_populate.py  test_save_hash.py  test_slug.py  test_store_merge.py  test_target.py  test_toml.py
tests/test_clang/: test_loader.py  test_pypy_compat.py  test_version_detect.py  test_windows_detection.py
tests/test_integration/: conftest.py  test_real_headers.py  test_roundtrip.py  test_roundtrip_ctypes.py  test_roundtrip_cython.py  test_roundtrip_diff.py  test_roundtrip_lua.py  test_roundtrip_prompt.py
tests/test_writers/: test_cffi.py  test_ctypes.py  test_cython.py  test_cython_types.py  test_diff.py  test_json.py  test_lua.py  test_prompt.py  test_registry.py
(+169 files in other folders)
