[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "headerkit"
version = "0.7.2"
description = "C/C++ header analysis toolkit with pluggable backends and writers for ctypes, Cython, CFFI, LuaJIT FFI, and more"
readme = "README.md"
license = "MIT AND Apache-2.0 WITH LLVM-exception"
license-files = ["LICENSE", "headerkit/_clang/LICENSE"]
authors = [
    { name = "elijahr", email = "elijahr+cir@gmail.com" },
]
keywords = ["c", "c++", "parser", "cffi", "libclang", "ir", "code-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://github.com/axiomantic/headerkit"
Repository = "https://github.com/axiomantic/headerkit"
Issues = "https://github.com/axiomantic/headerkit/issues"
Changelog = "https://github.com/axiomantic/headerkit/blob/main/CHANGELOG.md"

[project.scripts]
headerkit-install-libclang = "headerkit.install_libclang:main"

[project.optional-dependencies]
test = ["pytest", "pytest-timeout"]
lint = ["ruff", "mypy"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.27", "mike>=2.1"]
dev = ["headerkit[test,lint,docs]"]

[tool.hatch.build.targets.wheel]
packages = ["headerkit"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["headerkit/_clang/v*/"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM"]
ignore = ["E501", "ARG002", "SIM102", "SIM108", "SIM110", "UP007"]

[tool.ruff.lint.isort]
known-first-party = ["headerkit"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 60
markers = [
    "libclang: tests requiring system libclang installation",
    "download: tests requiring network access to download headers",
]
